--- a/my-account.html
+++ b/my-account.html
@@ -26,6 +26,12 @@
                 <a class="nav-link fw-bold" href="index.html">الطلبات</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link fw-bold" href="departments.html">الأقسام</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link fw-bold" href="accounts.html">الحسابات</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link fw-bold active" href="my-account.html">حسابي</a>
               </li>
             </ul>
