--- a/departments.html
+++ b/departments.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
-    <title>الرئيسية - كلية الاتصالات والمعلومات</title>
+    <title>الأقسام - كلية الاتصالات والمعلومات</title>
   </head>
   <body>
   
@@ -19,45 +19,17 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">إنشاء طلب جديد</h5>
+          <h5 class="modal-title" id="exampleModalLabel">اضافة قسم جديد</h5>
         </div>
         <div class="modal-body">
 
           <form>
             <div class="mb-3 row">
-                <label class="col-sm-3 col-form-label text-center">نوع الطلب</label>
+                <label class="col-sm-3 col-form-label text-center">اسم القسم</label>
                 <div class="col-sm-9">
                   <input type="text" class="form-control">
                 </div>
               </div>
-
-              <div class="mb-3 row">
-                <label class="col-sm-3 col-form-label text-center">المبنى والقاعة</label>
-                <div class="col-sm-9">
-                  <input type="text" class="form-control">
-                </div>
-              </div>
-
-              <div class="mb-3 row">
-                <label class="col-sm-3 col-form-label text-center">وصف الطلب</label>
-                <div class="col-sm-9">
-                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                </div>
-              </div>
-
-              <div class="mb-3 row">
-                <label class="col-sm-3 col-form-label text-center">القسم</label>
-                <div class="col-sm-9">
-                    <select class="form-select" aria-label="Default select example">
-                        <option selected>إختيار</option>
-                        <option value="1">تقنية المعلومات</option>
-                        <option value="2">الصيانة والإصلاحات</option>
-                        <option value="3">العيادة الطبية</option>
-                        <option value="4">المقهى</option>
-                    </select>
-                </div>
-              </div>
-
           </form>
 
         </div>
@@ -73,15 +45,15 @@
         <div class="container">
           <a class="navbar-brand" href="index.html"><img src="imgs/tvtc-logo.svg" alt="" width="200"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon">
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link fw-bold active" href="index.html">الطلبات</a>
+                <a class="nav-link fw-bold" href="index.html">الطلبات</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link fw-bold" href="departments.html">الأقسام</a>
+                <a class="nav-link fw-bold active" href="departments.html">الأقسام</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link fw-bold" href="accounts.html">الحسابات</a>
@@ -90,67 +62,47 @@
                 <a class="nav-link fw-bold" href="my-account.html">حسابي</a>
               </li>
             </ul>
-                <div class="me-2" id="greeting_time"></div><span class="fw-bold me-4">سعود الحبيب</span>
+                <div class="me-2" id="greeting_time"></div><span class="fw-bold me-4">سعود الحبيب
               <a href="sign-in.html"><button class="btn btn3" style="font-size: 15px; border-radius: 25px;">تسجيل الخروج</button></a>
           </div>
         </div>
       </nav>
       
     <div class="container" style="margin-top: 100px;">
-        <button class="btn btn4" data-bs-toggle="modal" data-bs-target="#exampleModal">انشاء طلب جديد<i class="fas fa-plus ms-2"></i></button>
+        <button class="btn btn4" data-bs-toggle="modal" data-bs-target="#exampleModal">اضافة قسم جديد<i class="fas fa-plus ms-2"></i></button>
         <table class="table text-center mt-3">
             <thead>
               <tr>
-                <th scope="col">رقم الطلب</th>
-                <th scope="col">مقدم الطلب</th>
-                <th scope="col">نوع الطلب</th>
-                <th scope="col">وصف الطلب</th>
-                <th scope="col">المبنى والقاعة</th>
-                <th scope="col">القسم</th>
+                <th scope="col">رقم القسم</th>
+                <th scope="col">اسم القسم</th>
                 <th scope="col">الاجراءات</th>
               </tr>
             </thead>
             <tbody>
               <tr>
                 <th scope="row">1</th>
-                <td>عبدالكريم الخلف</td>
-                <td>طلب جهاز جديد</td>
-                <td>طلب جهاز جديد وتجهيزه ببرامج اوفيس</td>
-                <td>م2ق5</td>
-                <td><span class="badge bg-info">تقنية المعلومات</span></td>
+                <td>تقنية المعلومات</td>
                 <td>
                     <button class="btn btn3 btn-sm btn-danger" style="font-size: 15px; border-radius: 10px; width: 35px;"><i class="far fa-trash-alt"></i></button>
                 </td>
               </tr>
               <tr>
                 <th scope="row">2</th>
-                <td>سعود الحبيب</td>
-                <td>طلب صيانة جهاز</td>
-                <td>الجهاز رقم 23 لا يعمل</td>
-                <td>م3ق1</td>
-                <td><span class="badge bg-info">الصيانة والإصلاحات</span></td>
+                <td>الصيانة والإصلاحات</td>
                 <td>
                     <button class="btn btn3 btn-sm" style="font-size: 15px; border-radius: 10px; width: 35px;"><i class="far fa-trash-alt"></i></button>
                 </td>
               </tr>
               <tr>
                 <th scope="row">3</th>
-                <td>محمد سعد</td>
-                <td>طلب دواء</td>
-                <td>2 حبة بنادول</td>
-                <td>م5ق3</td>
-                <td><span class="badge bg-info">العيادة الطبية</span></td>
+                <td>العيادة الطبية</td>
                 <td>
                     <button class="btn btn3 btn-sm" style="font-size: 15px; border-radius: 10px; width: 35px;"><i class="far fa-trash-alt"></i></button>
                 </td>
               </tr>
               <tr>
                 <th scope="row">4</th>
-                <td>صالح عبدالعزيز</td>
-                <td>طلب من المقهى</td>
-                <td>1 علبة ماء</td>
-                <td>مبنى العمادة</td>
-                <td><span class="badge bg-info">المقهى</span></td>
+                <td>المقهى</td>
                 <td>
                     <button class="btn btn3 btn-sm" style="font-size: 15px; border-radius: 10px; width: 35px;"><i class="far fa-trash-alt"></i></button>
                 </td>
